# bitmex-trio-websocket

./: .bumpversion.cfg  .pylintrc  .travis.yml  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
bitmex_trio_websocket/: __init__.py  auth.py  exceptions.py  logger.py  parser.py  postgres.py  statistics.py  storage.py  util.py  websocket.py
bitmex_trio_websocket/storage/: __init__.py  memory.py  postgres.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: _logging.py  example.py  example2.py  postgres.py  statistics.py
tests/: __init__.py  test_bitmex_trio_websocket.py  test_postgres_storage.py  test_websocket.py
