[tool.poetry]
name = "bitmex-trio-websocket"
version = "0.2.4"
description = "Websocket implementation for BitMEX cryptocurrency derivatives exchange."
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
trio-websocket = "^0.8.0"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
pip = "^19.3"
bump2version = "^0.5.11"
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7"
tox = "^3.14"
coverage = "^4.5"
Sphinx = "^2.2"
twine = "^3.0"
pytest = "^5.3"
pytest-runner = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
