[tool.poetry]
name = "bitmex-trio-websocket"
version = "0.10.0"
description = "Websocket implementation for BitMEX cryptocurrency derivatives exchange."
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]
license = "MIT"
homepage = "https://github.com/andersea/bitmex-trio-websocket"
readme = "README.md"
keywords = ["BitMEX", "Trio", "Websocket", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Framework :: Trio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
sortedcontainers = "^2.1.0"
async_generator = "^1.10"
pendulum = "^2.0.5"
slurry-websocket = "^0.1.4"
slurry = "^0.4.0"

[tool.poetry.dev-dependencies]
pip = "^19.3"
bump2version = "^0.5.11"
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7"
tox = "^3.14"
coverage = "^4.5"
Sphinx = "^2.2"
twine = "^3.0"
pytest = "^5.3"
pytest-runner = "^5.2"
pytest-trio = "^0.5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
